execute ./gradlew rewriteRun